# arq

./: .dockerignore  .gitignore  .prettierignoreRetryM  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src-tauri/: tauri.conf.json
apps/frontend/: package.json
apps/frontend/app/: layout.tsx  page.tsx
services/core/app/: __init__.py
