[package]
name = "src-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.2", features = ["custom-protocol"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2.3.3"
tokio = { version = "1.48.0", features = ["full"] }
